--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   font-family: "PT Sans", sans-serif;
+  background-color: #000000;
 }
 
 .wrapper {
@@ -241,6 +242,10 @@ body {
 .season2020__new-collection > .block-header > .line {
   margin: 30px 0px;
 }
+.season2020 .image-slider {
+  width: 880px;
+  margin: 0 auto;
+}
 
 .item {
   margin: 0px 15px;
@@ -335,7 +340,7 @@ body {
   background-color: #000000;
   color: white;
   font-family: "Playfair Display", serif;
-  padding: 120px 0px 150px 0px;
+  padding: 50px 0px 50px 0px;
 }
 .clocks-new__row {
   display: flex;
@@ -353,6 +358,9 @@ body {
 .clocks-new__items > .item > p:last-child {
   margin-bottom: 40px;
 }
+.clocks-new .img-slider {
+  width: 1110px;
+}
 
 .brands {
   background-color: #0F0F0F;
@@ -368,6 +376,9 @@ body {
 .brands__items {
   display: flex;
   flex-wrap: wrap;
+}
+.brands .img-slider {
+  width: 1110px;
 }
 
 .footer {
@@ -474,228 +485,4 @@ body {
   text-decoration: underline;
   font-weight: 700;
   cursor: pointer;
-}
-
-@media (max-width: 1673px) {
-  .season2020__row {
-    align-items: center;
-    flex-direction: column;
-  }
-  .season2020__clocks {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 0px;
-  }
-  .season2020__new-collection {
-    width: 100%;
-  }
-}
-@media (max-width: 1200px) {
-  .static__info {
-    margin-left: 15px;
-  }
-  .static__login {
-    margin-right: 15px;
-  }
-
-  .header__logo {
-    margin-left: 15px;
-  }
-  .header__nav {
-    margin-right: -3px;
-  }
-
-  .clocks-new {
-    padding: 0px 15px;
-  }
-  .clocks-new .block-header {
-    margin-top: 50px;
-  }
-  .clocks-new .clocks-new__items > .item {
-    margin: 0px 7px;
-    margin-bottom: 30px;
-  }
-
-  .bottom__law {
-    margin-left: 15px;
-  }
-  .bottom__figma {
-    margin-right: 15px;
-  }
-}
-@media (max-width: 1121px) {
-  .clocks-new {
-    padding-bottom: 35px;
-  }
-  .clocks-new > .container {
-    max-width: 576px;
-  }
-  .clocks-new .clocks-new__items {
-    justify-content: center;
-  }
-  .clocks-new .clocks-new__items > .item > p:last-child {
-    margin-bottom: 5px;
-  }
-
-  .season2020__clocks {
-    padding: 0px 15px;
-    padding-bottom: 50px;
-  }
-  .season2020__clocks > .block-header {
-    padding-top: 50px;
-  }
-  .season2020__clocks .season2020__clock > .item {
-    margin: 0px 5px;
-  }
-
-  .footer__row {
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 350px;
-    margin: 0 auto;
-  }
-  .footer__about {
-    width: 100%;
-    margin-bottom: 25px;
-  }
-  .footer__categorys {
-    width: 100%;
-  }
-  .footer__items {
-    margin-bottom: 25px;
-  }
-  .footer__mail {
-    max-width: 350px;
-    width: 100%;
-    margin-bottom: 25px;
-  }
-}
-@media (max-width: 1019px) {
-  .brands .brands__row {
-    max-width: 510px;
-    margin: 0 auto;
-  }
-}
-@media (max-width: 990px) {
-  .header__row {
-    justify-content: space-between;
-  }
-  .header__logo {
-    align-self: flex-start;
-  }
-  .header__nav {
-    display: none;
-  }
-  .header__item {
-    display: block;
-    padding: 0;
-    margin-bottom: 15px;
-    width: 100%;
-  }
-  .header__item:first-child {
-    padding-left: 0px;
-  }
-  .header__item:nth-child(3) {
-    padding-left: 0px;
-    margin-bottom: 30px;
-  }
-  .header__item:nth-child(4) {
-    margin-left: 0px;
-    padding-left: 0px;
-    margin-right: 50px;
-    display: inline;
-  }
-  .header__item:last-child {
-    position: relative;
-    top: 3px;
-    display: inline;
-  }
-  .header__btn {
-    display: flex;
-  }
-
-  .collection2018__img {
-    display: none;
-  }
-  .collection2018__info {
-    width: 100%;
-    background: url(/img/block3.jpg) 0 0/cover no-repeat;
-    background-position: center;
-  }
-}
-.header__nav.active {
-  display: block;
-  flex-direction: column;
-  padding-top: -20x;
-}
-
-.header__row.active {
-  justify-content: space-between;
-}
-
-.header__btn.active {
-  align-self: flex-start;
-  transform: rotate(45deg);
-  border: 0;
-}
-
-.header__btn3.active {
-  display: block;
-  transform: rotate(90deg);
-  top: -3px;
-}
-
-.header__logo.active {
-  visibility: hidden;
-}
-
-@media (max-width: 850px) {
-  .season2020__clocks {
-    max-width: 510px;
-    padding-bottom: 30px;
-  }
-  .season2020__clocks .season2020__clock > .item {
-    margin: 0 auto;
-  }
-  .season2020__clocks .season2020__clock > .item > p:last-child {
-    margin-bottom: 35px;
-  }
-}
-@media (max-width: 575px) {
-  .item img {
-    padding: 35px 15px;
-  }
-}
-@media (max-width: 510px) {
-  .static__row {
-    flex-direction: column;
-    text-align: center;
-  }
-  .static__info {
-    margin-right: 15px;
-  }
-
-  .brands__row {
-    max-width: 320px;
-  }
-  .brands__row .brands__items {
-    display: block;
-  }
-
-  .season2020__new-collection > .block-header {
-    margin: 0 auto;
-    margin-top: 350px;
-    margin-bottom: 50px;
-  }
-
-  .collection2018__info > .block-header {
-    margin-top: 50px;
-  }
-  .collection2018__info > .block-header > .btn {
-    margin-bottom: 75px;
-    margin-top: 30px;
-  }
-  .collection2018__info > .block-header > .line {
-    margin: 25px 0px;
-  }
 }
