--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 
 body{
     font-family: 'PT Sans', sans-serif;
+    background-color: #000000;
 }
 
 .wrapper {
@@ -187,6 +188,11 @@ body{
             margin: 30px 0px;
         }
     }
+
+    .image-slider {
+        width: 880px;
+        margin: 0 auto;
+    }
 }
 
 .item {
@@ -286,7 +292,7 @@ body{
     background-color: #000000;
     color: white;
     font-family: 'Playfair Display', serif;
-    padding: 120px 0px 150px 0px;
+    padding: 50px 0px 50px 0px;
     &__row {
         display: flex;
         flex-direction: column;
@@ -305,6 +311,9 @@ body{
             }
         }
     }
+    .img-slider{
+        width: 1110px;
+    }
 }
 
 .brands {
@@ -321,6 +330,9 @@ body{
     &__items {
         display: flex;
         flex-wrap: wrap;
+    }
+    .img-slider{
+        width: 1110px;
     }
 }
 
@@ -444,8 +456,6 @@ body{
         cursor: pointer;
     }
 }
-
-@import "media.scss";
 
 
 
